[package]
name = "vprytz-chess-gui"
version = "0.1.0"
authors = ["Vilhelm Prytz <vprytz@kth.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_template = { git = "https://github.com/IndaPlus22/eskilny-task-3.git" } # Replace this with the library you want to use
linked-hash-map = "0.5.4" 
ggez = "0.6.1"
rand = "0.8.4"
